# forg-file-organizer

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  organizer.rs  utils.rs
