[package]
name = "file-organizer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to organize files by type, date, or custom rules"
license = "MIT"
repository = "https://github.com/lazzerex/forg-file-organizer"
keywords = ["cli", "file-management", "organization"]

[[bin]]
name = "forg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.0"